--- a/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSettings.apk/res/values-sk/strings.xml
@@ -558,4 +558,98 @@ Pre správne fungovanie, táto aplikácia vyžaduje pripojenie na internet a nas
     <string name="white_bellied_sea_eagle">Orol bielochvostý</string>
     <string name="willow_grouse">Willow ptarmigan</string>
     <string name="wombat">Wombat</string>
+    
+<string name="amazon_orange_winged_info">Amazonka oranžová je veľký, hlučný papagáj, ktorý vydáva hlasné, vysoké výkriky.</string>
+     <string name="asian_badger">ázijský jazvec</string>
+     <string name="asian_black_bear">Ázijský čierny medveď</string>
+     <string name="australian_magpie">Austrálska straka</string>
+     <string name="black_head_bulbul_info">Tieto vtáky sa často pohybujú v skupinách a lietajú na krátke vzdialenosti.</string>
+     <string name="black_necked_crane">Žeriav s čiernym krkom</string>
+     <string name="capybara_info">Kapybary sú polovodné bylinožravé hlodavce, ktoré dokážu zadržať dych pod vodou až na päť minút v kuse.</string>
+     <string name="cheetah_info">Gepardy sú najrýchlejšie suchozemské zvieratá s flexibilnou a komplexnou sociálnou štruktúrou.</string>
+     <string name="class_amphibious">Obojživelníky</string>
+     <string name="copy">Kopírovať</string>
+     <string name="customize_radio_btn_summary">Uprednostniť vybratú obnovovaciu frekvenciu</string>
+     <string name="customize_radio_btn_title">Vlastné</string>
+     <string name="dart_frog_info">Jeho svetlomodrá koža a jedovaté žľazy sú obrannými mechanizmami pred potenciálnymi predátormi.</string>
+     <string name="dc_light_hint_unnormal_other">Režim slabého svetla proti blikaniu môže ovplyvniť obnovovaciu frekvenciu a spôsob zobrazenia niektorých položiek.</string>
+     <string name="expand_button_title">Rozšírené</string>
+     <string name="focus_mode_custom_time">Vlastné trvanie</string>
+     <string name="fps_high">Vysoká</string>
+     <string name="fps_normal">Štandardné</string>
+     <string name="fps_radio_btn_title">Frekvencia obnovenia</string>
+     <string name="fps_save_battery_tips">Šetrič batérie je zapnutý. Obnovovacia frekvencia nastavená na %d Hz.</string>
+     <string name="fps_user_tip_footer">"%1$d. Aby ste pochopili rozdiel medzi vyššou a nižšou obnovovacou frekvenciou, ukážky sa tu prehrávajú pomalšie. Pri bežnom používaní môže byť pre vás ťažšie zaznamenať rozdiel.
+%2$d. V niektorých prípadoch môže byť obnovovacia frekvencia upravená dynamicky podľa toho, aké položky sú zobrazené."</string>
+     <string name="galapagos_cormorant">Nelietavý kormorán</string>
+     <string name="galapagos_dove">galapágska holubica</string>
+     <string name="galapagos_hawk">galapágsky jastrab</string>
+     <string name="galapagos_mockingbird">Galapagos mockingbird</string>
+     <string name="galapagos_penguin">Tučniak z Galapág</string>
+     <string name="geospiza_conirostris">Española kaktusová pinka</string>
+     <string name="giant_panda">Panda veľká</string>
+     <string name="golden_eagle">Zlatý orol</string>
+     <string name="golden_rumped_tinkerbird">Vtáčik so žltým hrbolčekom</string>
+     <string name="great_frigatebird">Veľká fregata</string>
+     <string name="green_peafowl">Páv zelený</string>
+     <string name="green_warbler_finch">Penica zelená</string>
+<string name="grey_headed_flying_fox">Liška šedohlavá</string>
+     <string name="high_fps_description">Vysoká obnovovacia frekvencia obrazovky. Vyššia spotreba energie.</string>
+     <string name="high_fps_tip_footer">Použitím vyšších obnovovacích frekvencií je zážitok zo sledovania plynulejší, ale spotrebúva viac energie.</string>
+     <string name="intelligent_radio_btn_summary">Upravte obnovovaciu frekvenciu dynamicky na základe scenárov, aby ste dosiahli rovnováhu medzi výkonom a spotrebou energie</string>
+     <string name="intelligent_radio_btn_title">Automaticky (odporúčané)</string>
+     <string name="jaeger_info">Tieto veľké sťahovavé vtáky často okrádajú iné morské vtáky o ich úlovky.</string>
+     <string name="large_ground_finch">Severiak veľký</string>
+     <string name="low_flicker_mode">Nízke svetlo</string>
+     <string name="low_flicker_mode_summary">Zabráňte blikaniu pri slabom osvetlení, aby ste znížili únavu očí</string>
+     <string name="low_fps_description">Nízka obnovovacia frekvencia obrazovky. Nižšia spotreba energie.</string>
+     <string name="lynx">Rys</string>
+     <string name="magnificent_frigatebird">Veľkolepá frigatebird</string>
+     <string name="marabou_stork_info">Bocian marabu je mohutný vták, častý mrchožrút.</string>
+     <string name="masked_palm_civet">Cibetka s maskovanou palmou</string>
+     <string name="medium_tree_finch">Stredná plutva stromová</string>
+     <string name="mix_match_type_galapagos_islands">Galapágy</string>
+     <string name="mix_match_type_southwest_mountain">Juhozápad Číny</string>
+     <string name="nazca_booby">Nazca hlupák</string>
+     <string name="norway_lemmings_info">Lemming nórsky žije v tundre a kopcoch a uprednostňuje život pri vode.</string>
+     <string name="not_set">Nenastavené</string>
+     <string name="ostrich_info">Pštrosy sú veľké nelietavé vtáky Afriky, ktoré kladú najväčšie vajcia zo všetkých živých suchozemských zvierat.</string>
+     <string name="pallas_s_cat">"Pallasova mačka"</string>
+     <string name="phoebastria_irrorata">Albatros vlnitý</string>
+     <string name="pied_butcherbird">Pied Butcherbird</string>
+     <string name="preference_copied">\"%1$s\" bolo skopírované do schránky.</string>
+     <string name="primary_color_region_chinese_only">príroda</string>
+     <string name="red_billed_tropicbird">Obratník červenozobý</string>
+     <string name="red_fox">Líška obyčajná</string>
+     <string name="red_panda">Panda červená</string>
+     <string name="sea_eagle_info">Orly morské sú silné vrcholové predátory a príležitostné mrchožrúty, ktoré zvyčajne žijú v blízkosti veľkých plôch otvorených vôd.</string>
+     <string name="service_ringtone_title">Tón zvonenia služby</string>
+     <string name="short_eared_owl">Krátko ušatá</string>
+     <string name="silver_pheasant">Strieborný bažant</string>
+     <string name="skywalker_hoolock_gibbon">Skywalker hoolock gibbon</string>
+     <string name="small_ground_finch">Plutva malá</string>
+     <string name="snow_leopard">Leopard snežný</string>
+<string name="split_page_authorization">Vitajte v aplikácii Čas pred obrazovkou! Tu môžete nastaviť limity času na obrazovke a zobraziť štatistiky. Klepnutím na \"Štart\" túto funkciu zapnete.</string>
+     <string name="split_page_start">Štart</string>
+     <string name="spur_winged_plover">Cejka ostrokrídla</string>
+     <string name="touch_description">Optimalizované tlačidlá a skratky vám pomôžu vyhnúť sa náhodnému dotyku</string>
+     <string name="touch_title">Vylepšené dotykové ovládanie</string>
+     <string name="tree_hyrax">Hyrax stromov</string>
+     <string name="usage_app_stop_desc">Všetky údaje a povolenia týkajúce sa času pred obrazovkou vrátane individuálnych nastavení, ako aj súvisiace položky uložené miestne, budú po vypnutí tejto funkcie odstránené.​</string>
+     <string name="usage_cta_desc">"Vitajte v Nastaveniach! Táto aplikácia musí zhromažďovať nasledujúce údaje, aby vám mohla poskytnúť štatistiku času pred obrazovkou a režimu sústredenia: počet odomknutí zariadenia, zoznam vašich aplikácií spolu s zodpovedajúce trvanie používania, počet rozsvietení obrazovky a nastavenia režimu zaostrenia. Zhromaždené údaje budú uložené iba lokálne v tomto zariadení.
+"</string>
+     <string name="usage_new_home_avg_usage_day">Priem. %s denne</string>
+     <string name="usage_new_home_sys_no_limit_summary">"Nie je možné obmedziť čas používania systémových aplikácií"</string>
+     <string name="usage_new_home_usage_detail">Podrobnosti o použití</string>
+     <string name="usage_remain_about_hour_miunte">≈%1$s %2$s</string>
+     <string name="usage_remain_hour_miunte">%1$s %2$s</string>
+     <string name="usage_state_percent">%s%%</string>
+     <string name="vampire_finch">Upírka zemná</string>
+     <string name="whipbird_info">Bihovce východné pochádzajú z východného pobrežia Austrálie.</string>
+     <string name="wild_boar">Diviak</string>
+     <string name="willow_grouse_info">Ptarmigán vŕbový je väčšinu svojho života bylinožravý a obýva predovšetkým subalpínske a subarktické biotopy.</string>
+     <string name="wolf">Vlk</string>
+     <string name="yellow_necked_spurfowl">Spurfowl žltokrký</string>
+     <string name="yellow_throated_marten">kuna žltohrdlá</string>
+     <string name="yunnan_snub_nosed_monkey">Čierna opica s tuponosým nosom</string>              
 </resources>
