--- a/Slovak/main/Weather.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Weather.apk/res/values-sk/strings.xml
@@ -368,4 +368,7 @@ Zadajte vaše mesto manuálne"</string>
     <string name="xiaomi_weather_description_title">O Počasí</string>
     <string name="yesterday">Včera</string>
     <string name="your_location">Vaša poloha</string>
+    
+<string name="privacy_policy_msg">Táto aplikácia obsahuje nasledujúce funkcie:&lt;br/>• Informácie o počasí špecifické pre vašu polohu&lt;br/>• Predpovede počasia&lt;br/>• Varovania pred počasím&lt;br/>&lt; br/>Počasie potrebuje zhromaždiť potrebné osobné informácie, aby vám mohlo poskytnúť základné služby. V našich Podmienkach používania sa dozviete, ako narábame s informáciami, ktoré zhromažďujeme. </string>
+     <string name="privacy_policy_msg_for_gp">áto aplikácia obsahuje nasledujúce funkcie:&lt;br/>• Informácie o počasí špecifické pre vašu polohu&lt;br/>• Predpovede počasia&lt;br/>• Varovania pred počasím&lt;br/>&lt; br/>Počasie potrebuje zhromaždiť potrebné osobné informácie, aby vám mohlo poskytnúť základné služby. V našich Podmienkach používania sa dozviete, ako narábame s informáciami, ktoré zhromažďujeme. </string>    
 </resources>
