--- a/Slovak/main/Bluetooth.apk/res/values-sk/strings.xml
+++ b/Slovak/main/Bluetooth.apk/res/values-sk/strings.xml
@@ -306,4 +306,6 @@
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    <string name="bluetooth_broadcast_status">Vysielanie zapnuté</string>
+        <string name="broadcast_notification_name">Stav vysielania</string>
 </resources>
