--- a/Slovak/main/MiuiGallery.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiGallery.apk/res/values-sk/strings.xml
@@ -2466,4 +2466,6 @@
 <string name="quarterly_pets_title">Chlpatí priatelia</string>
 <string name="sea_title">Vlny</string>
 <string name="solar_valentines_day_title">Sviatok svätého Valentína</string>     
+        <string name="album_screenshot_and_screen_recorder_name">Screenshoty a záznamy</string>
+
 </resources>
